# devsecops_lab1_example

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: app.py
src/templates/: index.html
tests/: test_app.py
