[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab_1"
version = "0.1.0"
description = "First lab"
requires-python = ">=3.9"
dependencies = [
    "flask==3.1.3",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
test = [
        "pytest==7.4.0",
        "bandit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.bandit]
targets = ["./src"]
level = "medium"
exclude_dirs = ["tests"]